--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <title>HYROX Training</title>
+    <title>HYROX Training - Updated</title>
     <!-- Add cache-busting to CSS if applicable -->
     <link rel="stylesheet" href="/styles.css?v=2.0">
   </head>
